--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: Inter, sans-serif;
+    color: #303030;
 }
 
 header {
@@ -31,7 +32,7 @@ header span {
     /* Стили для первой секции */
     width: 1440px;
     height: 1024px;
-    top: 70px;
+    padding: 60px 0;
     background: #FAFAFF;
 }
 
@@ -43,7 +44,7 @@ header span {
     color: #303030;
     width: 552px;
     height: 58px;
-    padding-top: 60px;
+    margin: 20px;
 }
 
 .main-text {
@@ -59,7 +60,7 @@ header span {
 
 .main-image {
     /* Стили для изображения в первой секции */
-    width: 715px;
+    max-width: 715px;
     height: 508px;
     margin-top: 160px;
 }
@@ -70,6 +71,7 @@ header span {
     width: 1440px;
     height: 883px;
     background: #FFFFFF;
+    padding: 100px 0;
 }
 
 select {
@@ -77,9 +79,9 @@ select {
     width: 150px;
     height: 36px;
     opacity: 1;
-    margin-top: 100px;
     border: 1px solid #3030304D;
     border-radius: 4px;
+    background-repeat: no-repeat;
 }
 
 .section-title {
@@ -89,26 +91,26 @@ select {
     line-height: 100%;
     width: 424px;
     height: 29px;
+    margin-bottom: 25px;
 }
 
 .frameworks-list {
     /* Стили для маркированного списка во второй секции */
     width: 80px;
     height: 57px;
-    margin-top: 25px;
     list-style-image: url("./icon/solar_map-arrow-up-bold.svg");
-    margin-bottom: 1rem;
+    padding: 0 25px;
 }
 
 .books-list {
     /* Стили для нумерованного списка во второй секции */
     width: 670px;
     height: 57px;
-    margin-top: 25px;
     font-weight: 400;
     font-size: 16px;
     line-height: 100%;
     color: #303030;
+    padding: 0 20px;
 }
 
 .label {
@@ -155,9 +157,9 @@ select {
     width: 1440px;
     height: 0;
     opacity: 1;
-    margin-top: 60px;
     border-width: 1px;
     color: #3030304D;
+    margin: 60px 0;
 }
 
 table {
@@ -166,6 +168,7 @@ table {
     width: 300px;
     height: 196px;
     margin-top: 60px;
+    font-size: 14px;
 }
 
 th, td {
@@ -174,7 +177,7 @@ th, td {
     height: 40px;
     font-size: 14px;
     line-height: 100%;
-    padding: 0 15px;
+    padding: 12px 15px;
 }
 
 footer {
@@ -183,6 +186,7 @@ footer {
     height: 70px;
     opacity: 1;
     background-color: #A3A7FF4D;
+    padding: 26px 0;
 }
 
 .footer-link {
@@ -192,4 +196,6 @@ footer {
     text-decoration: none;
     color: #2965F1;
     vertical-align: center;
+    font-size: 14px;
+    font-weight: 400;
 }
